Add missing documents
